<?xml version="1.0" encoding="utf-8"?>
<!--
    Add / Edit Ingredient screen. The same layout serves both modes; which one
    is in use depends on whether an item ID arrived in the Intent.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_add_edit"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/screen_padding_horizontal">

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/Widget.Skaflik.TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_name"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Quantity -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_quantity"
                style="@style/Widget.Skaflik.TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_quantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Unit -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_unit"
                android:textAppearance="?attr/textAppearanceLabelLarge" />

            <Spinner
                android:id="@+id/spinner_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:minHeight="@dimen/touch_target_min" />

            <!-- Expiry date, optional -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_expiry"
                style="@style/Widget.Skaflik.TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_expiry"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_calendar"
                app:helperText="@string/field_expiry_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_expiry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                style="@style/Widget.Skaflik.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xxl"
                android:text="@string/action_save" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
